feat: illustrate issues with wildcard params
